Update to Java command line args used to run the Clojure benchmark.